--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>My Webpage</title>
-    <link rel="stylesheet" type="text/css" href="css%20file.css">
+    <link rel="stylesheet" type="text/css" href="cssfile.css">
           </head>
     <body>
         <div class="full">
