--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>My Webpage</title>
+    <title>Ishant Khurana</title>
     <link rel="stylesheet" type="text/css" href="cssfile.css">
           </head>
     <body>
